tests/fail/block_naked_destructure.tk
import core/result::Result
import std/string::string

pub fn main() -> i32 {
    auto string_res# = Result<string, string>::Ok(string::from("Test"))
    
    match string_res# {
        auto Ok(msg) => { // SHOULD FAIL HERE!
            msg.c_str()
        }
        auto Err(e) => {} // SHOULD FAIL HERE!
    }

    return 0
}
